Stop laser output on rapid moves